# DiffusionImagingTK

./: CMakeLists.txt  README.md  itk-module.cmake
include/: itkDTIPixelReorientationOperator.h  itkDTIPixelReorientationOperator.hxx  itkDTIReconImageFilter.h  itkDTIReconImageFilter.hxx  itkDiffusionModelCalculator.h  itkDiffusionModelCalculator.hxx  itkFiberGenerator.h  itkFiberGenerator.hxx  itkFiberTrackingManager.h  itkFiberTrackingManager.hxx  itkNumericTraitsSymRshPixel.h  itkPeakFindingCalculator.h  itkPeakFindingCalculator.hxx  itkPeakFindingCalculatorGrid.h  itkPeakFindingCalculatorGrid.hxx  itkPeakFindingFilter.h  itkPeakFindingFilter.hxx  itkPixelReorientationOperator.h  itkPixelReorientationOperator.hxx  itkRSHPixelReorientationOperator.h  itkRSHPixelReorientationOperator.hxx  itkRSHReconImageFilter.h  itkRSHReconImageFilter.hxx  itkReplaceSpecialFunctions.h  itkSymMatPixelReorientationOperator.h  itkSymMatPixelReorientationOperator.hxx  itkSymRealSphericalHarmonicRep.h  itkSymRealSphericalHarmonicRep.hxx  itkTrackerDirectionPickerDTI.h  itkTrackerDirectionPickerDTI.hxx  itkTrackerDirectionPickerDWI.h  itkTrackerDirectionPickerDWI.hxx  itkTrackerDirectionPickerImageBase.h  itkTrackerDirectionPickerImageBase.hxx  itkTrackerDirectionPickerRSH.h  itkTrackerDirectionPickerRSH.hxx  itkVariableLengthVectorCastImageFilter.h
src/: CMakeLists.txt  itkReplaceSpecialFunctions.cxx
src/vtkMatrixTemplates/: vnl_matrix_fixed.120.120.cxx  vnl_matrix_fixed.15.15.cxx  vnl_matrix_fixed.153.153.cxx  vnl_matrix_fixed.190.190.cxx  vnl_matrix_fixed.231.231.cxx  vnl_matrix_fixed.28.28.cxx  vnl_matrix_fixed.45.45.cxx  vnl_matrix_fixed.66.66.cxx  vnl_matrix_fixed.91.91.cxx
test/: CMakeLists.txt  itkDTIReconImageFilterTest.cxx  itkDiffusionModelCalculatorTest.cxx  itkFiberGeneratorTest.cxx  itkFiberTrackingManagerTest.cxx  itkFiberTrackingManagerTest2.cxx  itkPeakFindingCalculatorGridTest.cxx  itkPeakFindingCalculatorTest.cxx  itkPixelReorientationOperatorTest.cxx  itkRSHReconImageFilterTest.cxx  itkReplaceSpecialFunctionsTest.cxx  itkSymRealSphericalHarmonicRepTest.cxx  itkTrackerDirectionPickerDTITest.cxx  itkTrackerDirectionPickerDWITest.cxx  itkTrackerDirectionPickerImageBaseTest.cxx  itkTrackerDirectionPickerRSHTest.cxx  testingUtils.cxx  testingUtils.h  testingUtils.hxx
test/Baseline/: DWIS_dti-scheme_SNR-30_DTI.nii.gz.md5  DWIS_dti-scheme_SNR-30_DTI_FA_mask.nii.gz.md5  DWIS_dti-scheme_seedTest_mask.nii.gz.md5  DWIS_dti-scheme_singleSeedTest_mask.nii.gz.md5  seeding_regions.nii.gz.md5  sim_dti_orig.nii.gz.md5  template_dwi.bval.md5  template_dwi.bvec.md5  template_dwi.nii.gz.md5  template_dwi_mask.nii.gz.md5
